<resources>
    <string name="app_name">Content_Resolver</string>
    <string name="student_crud">Manage Student Resolver</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="btnAdd">Add Student</string>
    <string name="btnUpdate">Update Student</string>
    <string name="btnDelete">Delete Student</string>
</resources>